# clearpath_robot-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  dependencies.repos  package.xml  patches.conf  releaser_history.json  setup.py  tracks.yaml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
clearpath_diagnostics/: CHANGELOG.rst  package.xml
clearpath_diagnostics/clearpath_diagnostics/: diagnostics_updater
clearpath_diagnostics/config/: diagnostic_aggregator.yaml  diagnostic_updater.yaml
clearpath_diagnostics/src/: clearpath_diagnostic_updater.cpp
clearpath_generator_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_generator_robot/launch/: generator.py  sensors.py
clearpath_generator_robot/param/: generator.py  sensors.py
clearpath_generator_robot/test/: test_generator_launch.py  test_generator_param.py
clearpath_hardware_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_hardware_interfaces/battery_state/: battery.py
clearpath_motor_drivers/lynx_motor_driver/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
clearpath_motor_drivers/lynx_motor_driver/config/: a300.yaml
clearpath_motor_drivers/lynx_motor_driver/include/lynx_motor_driver/: can_api.hpp  lynx_motor_driver.hpp  lynx_motor_node.hpp  message.hpp
clearpath_motor_drivers/lynx_motor_driver/launch/: lynx_motor_driver.launch.py
clearpath_motor_drivers/lynx_motor_driver/src/: calibrate_action.cpp  lynx_motor_driver.cpp  lynx_motor_node.cpp  main.cpp  system_protection.cpp  update_action.cpp
clearpath_motor_drivers/puma_motor_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_robot/debian/: install  postinst  udev
clearpath_robot/scripts/: generate  grab-diagnostics  install  vcan
clearpath_robot/services/: clearpath-discovery.service  clearpath-platform-extras.service  clearpath-platform.service  clearpath-robot.service  clearpath-sensors.service  clearpath-shutdown.service
clearpath_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_sensors/config/: fixposition.yaml  inventus_bmu.yaml  luxonis_oakd.yaml  ouster_os1.yaml  stereolabs_zed.yaml  wiferion.yaml
clearpath_sensors/launch/: flir_blackfly.launch.py  imu_filter.launch.py  intel_realsense.launch.py  luxonis_oakd.launch.py  microstrain_imu.launch.py  ouster_os1.launch.py  stereolabs_zed.launch.py  wiferion.launch.py
clearpath_tests/: CHANGELOG.rst  diagnostic_test.py  fan_test.py  package.xml  setup.py  wifi_test.py
clearpath_tests/clearpath_tests/: all_tests.py  canbus_test.py  diagnostic_test.py  drive_test.py  estop_test.py  fan_test.py  imu_test.py  light_test.py  (+6 more)
config/: flir_ptu.yaml  microstrain_imu_gv7.yaml  single_test.yaml
debian/: changelog  control  copyright  gbp.conf  postinst  rules  udev
launch/: axis_camera.launch.py  fixposition.launch.py  flir_ptu.launch.py  luxonis_oakd.launch.py
scripts/: grab-diagnostics  install  shutdown.py
services/: clearpath-manipulators.service  clearpath-zenoh-router.service
src/: clearpath_diagnostic_updater.cpp  driver.cpp  lynx_motor_driver.cpp  lynx_motor_node.cpp  multi_puma_node.cpp  update_action.cpp
(+51 files in other folders)
